--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dialectlabs/blinks",
+  "name": "@dialectlabs/blinks-solflare",
   "version": "0.3.2",
   "license": "Apache-2.0",
   "private": false,
